--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,82 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Chateaugay Hotel</h2>
+      <hr>
+      <h5>January 15, 2023 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 6</div>
+    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 6</div>
+    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 6</div>
+    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 6</div>
+    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">5 / 6</div>
+    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">6 / 6</div>
+    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_06.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>I was stopped at the light at the Four Corners this afternoon. I happened to look over at the Hotel while waiting for the light to change.</p>
+
+<p>Many comments have been made on this page over the years about how it has fallen into ruin.
+However, I'm hoping these photos above prompt some memories of the place way "back in the day" and when it was a busy part of downtown.</p>
+
+<p>The first two are shots from 1935. Note the traffic light in the middle of the intersection. The hotel was called the Chateau then. The lobby had floor-to-ceiling windows so those sitting there could watch traffic and passersby and solve the problems of the world.</p>
+
+<p>The next two are from 1944. Notice the tin ceilings in both the bar and the Arabian Room (dining room). Looking out the window of the dining room, the Dairy and the Liquor Store are right across Depot Street.</p>
+
+<p>The last two are from 1949. The dining room photo shows the smaller bar and the bandstand. The glimpse of the wallpaper on the right compliments the dining room's name, "The Arabian Room".</p>
+
+<p>There were more "glory" years to come - the ‘50s, ‘60s, ‘70s, and on... until it closed for good.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>The Importance of Hometown Newspapers</h2>
       <hr>
       <h5>December 18, 2022 | Mick Jarvis</h5>
@@ -84,21 +160,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2022-12-18_newspapersource/newspapersource_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2022-12-18_newspapersource/newspapersource_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -135,7 +211,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Catholic Church Locations</h2>
@@ -149,15 +225,15 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 1</div>
     <img src="blog/imgs/2022-11-26_catholiclocations/catholiclocations_01.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -182,119 +258,6 @@
 <p>Thanks.</p>
 
 <p>The image above shows the three church locations (well actually three churches, but just two building locations and one proposed but unused piece of property)...</p>
-        </div>
-    </div>
-</div>
-
-
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Wooden Water Pipes in Chateaugay</h2>
-      <hr>
-      <h5>November 16, 2022 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 8</div>
-    <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 8</div>
-    <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 8</div>
-    <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_03.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">4 / 8</div>
-    <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_04.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">5 / 8</div>
-    <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_05.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">6 / 8</div>
-    <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_06.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">7 / 8</div>
-    <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_07.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">8 / 8</div>
-    <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_08.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>I have been researching the water system in the Village of Chateaugay recently and have amassed some interesting facts about the earliest pipes laid throughout the community.</p>
-
-<p>The earliest and most inexpensive water pipes were of wood. Long, straight trees were cut into various lengths (most commonly between six and ten feet long) and were bored through the center with a long steel auger bit. Depending on the size of the bit used, the hole down the length of the log would typically be an inch to an inch and a half in diameter.</p>
-
-<p>This simple method was the most labor efficient. To make joints, one end of a bored log would be sharpened to a tapered end and inserted into the flat end of the log laid before it. The bored hole in the flat-ended log would be enlarged slightly so that when the pointed end was driven in, the diameter of the hole was not constricted and the flow of water impeded.</p> 
-
-<p>This process would be repeated and lines laid under the streets. It was a simple matter of drilling into the line to attach smaller, branch lines which fed homes and businesses.</p>
-
-<p>The tapered joints could be sealed with pine tar or other material, but most often were left “dry” and without sealant since, when the pipes were filled with moving water, the wood fibers would swell and the joint became water tight.</p>
-
-<p>In our area, cedar, pine, hemlock, or even elm were most often used, although any long, straight-grained tree could serve this purpose. These lines could last well over a hundred years without rotting as there were never any appreciable levels of oxygen available to allow rot to take place. The outside of the pipes was surrounded by soil and fill that would soon compact and seal the outer surfaces, and the inside of the pipe was always filled with water.</p>
-
-<p>This is the same circumstance shown on some reality shows on cable tv with present-day loggers harvesting old, downed trees from the beds of large open rivers. In many cases, the trees have been underwater for decades (maybe even centuries), but when brought up and dried, can be sawed up and milled into perfectly good lumber.</p>
-
-<p>Back to wooden water lines—another example of early, wooden pipes is much more labor intensive. This involves “stave” pipes, which were assembled from long chamfered pieces of lumber (think long barrel-like construction) which were bound around the outside with either a coarse wire or flat metal bands. This process was a refinement of the bored log system and was only used if the community laying the lines had the resources and money to pay for the added labor and related expenses involved.</p>
-
-<p>Evidently, one of the advantages of wooden pipes in communities was when fighting fires. If the pipe was readily accessible, it was an easy process to drill into the pipe, insert a hose end and have water available to fight a blaze. To seal the pipe again, it was simply a matter of driving a round plug into the newly-drilled hole in the side of the pipe. Thus, the origin of the term; “fire plug”.</p>
-
-<p>How does this all apply to Chateaugay? To start at the beginning of the process, as they say; the Village was incorporated in 1868. In the earliest days of the community, every home had their own hand-dug well (or cistern or brook, etc.) as a water source and were responsible for their own water supply for daily life.</p> 
-
-<p>Shortly after the incorporation, plans were made for a municipal water system, although the actual water line network would come later. Finally, in 1880, a water line network was begun in the Village by the Chateaugay Waterworks Company, using wooden piping. It appears that the bored pipe method was used in these earliest lines.</p> 
-
-<p>This system worked well for decades but eventually metal pipes began to replace the older, wooden sections of the waterworks—partly to replace sections in need of repair, or to build entirely new lines, but more importantly, to increase water volume to the growing community with larger capacity lines.</p>
-
-<p>Although metal pipes had largely replaced the wooden lines during the early years of the 20th Century, within the last twenty years or so, sections of wooden pipes have even been dug up on Iron Avenue when water line work was being done there. So, there were (or maybe still are) a few short sections of wooden pipe carrying water in the village into the present-day.</p>
-
-<p>In 2018, Tony Green, who was then the maintenance supervisor at the local milk plant, called me up and told me of some wooden pipes unearthed at the end of Collins Street where the plant had some construction underway. He took photos of some of the log lines after they were pulled from the ground and then sawed sections that showed the bored water line and a tapered end that was used in a pipe joint. He turned the sawed examples over to the Historical Society.</p>
-
-<p>Eight photos are featured above: three that Tony took, two images of the sawed sections in our Archival Center, followed by three Google Images that show a stave pipe with the outer wrappings, a good view of wooden pipes jointed with a tapered, pointed joint, and a photo showing how the logs would be bored with a long metal bit.</p> 
-
-<p>So, the first five images are of local, Chateaugay Village wooden pipes and the last three are stock images from the internet showing pipe details.</p>
-
-<p>On a personal note, my Dad was a plumber at the mines in Lyon Mountain as a young man. As a youngster, I often helped him when he did plumbing for others or at our home. I remember having to help thread pipes, coating the new threads with pipe dope to help seal them, and tighten the fittings using pipe wrenches, or helping to seal the bell joints in Orangeburg sewer pipes by pounding oakum into the joint and sealing it with melted lead. All very labor intensive, for sure.</p>
-
-<p>When thinking about plumbing and how it has progressed from lead and iron pipes, copper, plastic, and now ultra-modern systems like Sharkbite and Pex; it is interesting to see how the plumbing trade certainly has undergone amazing changes in materials, techniques, and processes.</p>
-
-<p>And to think that the local materials used to run the earliest water pipes in the village were just the trees growing here…</p>
         </div>
     </div>
 </div>
