--- a/blog.html
+++ b/blog.html
@@ -149,6 +149,77 @@ However, I'm hoping these photos above prompt some memories of the place way "ba
 <div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Chateaugay Memories</h2>
+      <hr>
+      <h5>January 7, 2023 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">1 / 4</div>
+    <img src="blog/imgs/2023-01-07_memories/memories_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">2 / 4</div>
+    <img src="blog/imgs/2023-01-07_memories/memories_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">3 / 4</div>
+    <img src="blog/imgs/2023-01-07_memories/memories_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">4 / 4</div>
+    <img src="blog/imgs/2023-01-07_memories/memories_04.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>I was recently doing some local research using the issues of the Chateaugay Record from the mid-50s through the mid-60s. After reading through so many newspapers as I took notes, I found myself sitting back and thinking about being a kid during that time. </p>
+
+<p>I think there was no better place for a kid to grow up. I remember so many great times like: sitting on Mose Humiston’s store steps and drinking the big Royal Crown Colas or buying some of his penny candy, Peterson’s and playing pitch in the booths while being yelled at by Evie Franklin for making too much noise and the way the place was always filled to bursting after basketball games, fishing, fishing, and more fishing, the original Jake’s Michigan stand down on West Main, the Skyliner and listening to the “Falcons” and so many other bands, Barnes’ at the Lake (most recently the Lakesider), the Valley Inn, Billy’s Grill, the Gay Bar, the hotel with Patsy Cline blasting on the juke box and all the other bars we were sometimes thrown out of for not having “proof” (and other times not even being checked), Larry Cook and I sitting in Peterson's and drinking Mountain Dew the first day it was ever available here after we had finished work for the day with the "Youth Corps", putting coins on the railroad tracks for the train to flatten as it passed through town, Bernie Mills' diner in the rail car next to the bank,  Paulie Jackson’s Pool Hall, tentatively exploring the Old School which sat cold and empty at the end of Church Street, riding our bikes up to Doug Bova’s store and eating a Sealtest ice cream sandwich while we watched the train go through, the Teen Center, parties at the Dew Drop Inn at the Chasm, camping and building forts up along the Boardman, Quinlan’s with the best meals and pie around, Joe Rovelle running the bowling alley and setting pins there (for a short while), endless baseball games each summer up at the “Old School” after the building was torn down, swimming in “Devil’s Hole”, movies at the theater and Pug McCarthy patrolling the aisles with his flashlight, and so many other great memories.</p>
+
+<p>On Friday and Saturday nights in the ‘50s and early ‘60s, people came to town to do their weekly shopping.  Many would park downtown just to sit in their cars with the windows rolled down and visit with all the folks on the street as they moved from store to store. Those things really cemented the bonds between people and made for a tight-knit little community.</p>
+
+<p>Practically everybody had a nickname, like: Hambone, Gizmo, Mose, Bugsy, Sky, Fish, Cannonball, Pug, Gramp, Red, Tarzan, Doc, Pin, Puddy, Didi, Frenchie, Chief, Twine, and, literally, hundreds of others… Back then communities were much less transient than today. With the Lyon Mountain mines, the milk plant, family farms and all of the local businesses, employment was always available and many generations remained where they were raised and there seemed to be so much more connectedness and strong sense of community. In a town like Chateaugay, which tends to foster strong, heartfelt connections anyway, that sense of belonging and “connectedness” led to longstanding familiarity and the nicknames just followed.	</p>
+
+<p>The way Chateaugay always has and always will connect so deeply with people is proof of how special it is.  This is the ideal hometown…guess that’s why I’m still here.</p>
+
+<p>Chateaugay definitely has changed from the “old days”; lots of vacant buildings, much less activity in the center of the village and new, sometimes more transient, families. But at its core, it still is the same small town that created so many great memories. There are some who live here now that don't know of the memories we carry but there are still many more who do. At its heart, Chateaugay remains pretty special with lots of stories to be remembered, appreciated and told…</p>
+
+<hr>
+
+<h4>Photo Captions:</h4>
+<li>Image 1 – Humiston's Store</li>
+<li>Image 2 – Mose Humiston behind the counter</li>
+<li>Image 3 – Peterson's Ice Cream Bar</li>
+<li>Image 4 – L to R: Sam Peterson, Georgie Peterson, and Evie Franklin</li>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog1">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>The Importance of Hometown Newspapers</h2>
       <hr>
       <h5>December 18, 2022 | Mick Jarvis</h5>
@@ -160,21 +231,21 @@ However, I'm hoping these photos above prompt some memories of the place way "ba
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2022-12-18_newspapersource/newspapersource_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2022-12-18_newspapersource/newspapersource_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -210,65 +281,12 @@ However, I'm hoping these photos above prompt some memories of the place way "ba
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Catholic Church Locations</h2>
-      <hr>
-      <h5>November 26, 2022 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 1</div>
-    <img src="blog/imgs/2022-11-26_catholiclocations/catholiclocations_01.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>A few weeks ago, I wrote a Blog Post about the three different St. Patrick's churches that were on West Main Street between 1844 and the present. Several people have since reached out and asked me to locate things on a map.</p>
-
-<p>Here goes...I used a Google Earth image of that part of West Main. To orient things, north is to the top of the map. The Four Corners is shown towards the upper right corner of the image.</p>
-
-<p>The yellow box and dot show the earliest locations of the church and rectory. The first church was flattened during the Tornado of 1856 which destroyed or damaged over 300 structures in the Town of Chateaugay. The second Church (on the same site) was shown in the photos that accompanied the Blog Post. It burned to the ground (in less than an hour) as the result of a lightning strike on July 12, 1919.</p>
-
-<p>But, even before the second church was destroyed, the parish was already thinking about building a larger church to accommodate the growing congregation. With that in mind, the parish purchased the land on the corner of Belle Avenue and West Main and the large home just to the west of it in 1911. That location is marked with the blue box and dot. Nothing happened as far as using the newly purchased property to erect a larger church and it sat unused.</p>
-
-<p>However, after the 1916 fire, the church had an opportunity to purchase the land where the church sits today. C.W. Sprague was willing to sell the large lot to St. Patrick's, so the decision was made to sell the unused lot on the corner of Belle Avenue and, eventually, the plot where the first two churches had stood, and build a larger Romanesque church on the much bigger lot which was also closer to the Four Corners.</p>
-
-<p>That's where the church sits today.</p>
-
-<p>All of this information is intended as background to the history of the present church building that is being researched and written by Rosemary Green. This coming July 8th will mark the 100th anniversary of the laying of the cornerstone of the present-day St. Patrick's.</p>
-
-<p>As Rosie is preparing her history of the Church of St. Patrick, I'd like to put out a plea...If anyone has photos showing the church (inside or outside) through the years, please consider loaning them to this project, so they can be scanned. I promise they will be carefully scanned and promptly returned. Contact us via email (chathistsoc@gmail.com) or Facebook PM me (Mick Jarvis) or Rosemary Green if you have any images that you would be willing to share for her project.</p>
-
-<p>Thanks.</p>
-
-<p>The image above shows the three church locations (well actually three churches, but just two building locations and one proposed but unused piece of property)...</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [January 16, 2023]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [January 21, 2023]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
